<resources>
    <string name="app_name">WF Meeting</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="main_logo" translatable="false">main Logo</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="hello">Hello User.\nPlease Login with Your Account First!</string>
    <string name="loging_in">Please wait…</string>
    <string name="start_instant_meeting">Start An Instant Meeting</string>
    <string name="join_meeting">Join The Meeting</string>
    <string name="schedule_meeting">Schedule a Meeting</string>
    <string name="meeting_s_topic">Meeting\'s Topic</string>
    <string name="schedule_a_meeting">Schedule a Meeting</string>
    <string name="date">Date:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="host_video_on">Host Video On</string>
    <string name="attendee_video_on">Attendee Video On</string>
    <string name="participants_can_join_before_host">Participants Can Join Before Host</string>
    <string name="use_personal_meeting_id">Use Personal Meeting ID</string>
    <string name="confirm">Confirm</string>
    <string name="meeting_id">Meeting ID</string>
</resources>
