<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    android:paddingTop="8dp">

    <TextView
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_a_meeting"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:inputType="text"
            android:hint="@string/meeting_s_topic"
            android:id="@+id/edScheduleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/edPassMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/lnrDate"
        android:onClick="onClickDatePicker"
        android:paddingTop="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:onClick="onClickDatePicker"
            android:textSize="16sp"
            android:id="@+id/tvDate"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/lnrTimeFrom"
        android:onClick="onClickTimeFrom"
        android:paddingTop="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:onClick="onClickTimeFrom"
            android:textSize="16sp"
            android:id="@+id/tvTimeFrom"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/lnrTimeTo"
        android:onClick="onClickTimeTo"
        android:paddingTop="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:onClick="onClickTimeTo"
            android:textSize="16sp"
            android:id="@+id/tvTimeTo"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:id="@+id/lnrHostVideo"
        android:paddingTop="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/host_video_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/swHostVideo"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:id="@+id/lnrAttendeeVideo"
        android:paddingTop="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/attendee_video_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Switch
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="4"
        android:id="@+id/lnrCanJoinB4Host"
        android:paddingTop="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/participants_can_join_before_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Switch
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="4"
        android:id="@+id/lnrUsePMI"
        android:paddingTop="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/use_personal_meeting_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Switch
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        style="@style/TextAppearance.AppCompat.Button"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnConfirm" />

</LinearLayout>