<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:text="@string/hello"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"/>

    <Button
        android:id="@+id/btnLoginWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        android:text="@string/btn_sign_in" />

    <LinearLayout
        android:id="@+id/progressPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">
        <ProgressBar
            android:id="@+id/progressBarWelcome"
            style="?android:attr/progressBarStyleSmall"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtConnecting"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loging_in"/>
    </LinearLayout>
</LinearLayout>